# ChangeLog for app-text/acroread
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.95 2007/01/17 21:14:10 kevquinn Exp $

  17 Jan 2007; Kevin F. Quinn <kevquinn@gentoo.org>
  acroread-7.0.8-r1.ebuild, acroread-7.0.9-r1.ebuild:
  Remove obsolete virtual/libstdc++-3.3 dependency (revisit of bug #146821)

*acroread-7.0.9-r1 (16 Jan 2007)

  16 Jan 2007; Kevin F. Quinn <kevquinn@gentoo.org>
  acroread-7.0.8-r1.ebuild, +acroread-7.0.9-r1.ebuild:
  Pass parameters on from our script to the language-specific scripts.

  16 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  acroread-7.0.9.ebuild:
  stable x86, security bug #159874

  14 Jan 2007; Kevin F. Quinn <kevquinn@gentoo.org>
  acroread-7.0.8-r1.ebuild, acroread-7.0.9.ebuild:
  Fix quoting on =~ conditional to work also with bash-3.2_pre9 (bug #162018;
  thanks all)

  14 Jan 2007; Olivier Crête <tester@gentoo.org> acroread-7.0.9.ebuild:
  Make QA_TEXTRELS also apply to amd64

  14 Jan 2007; <malc@gentoo.org> acroread-7.0.9.ebuild:
  Stable on amd64 wrt bug #159874

*acroread-7.0.9 (14 Jan 2007)

  14 Jan 2007; Kevin F. Quinn <kevquinn@gentoo.org> metadata.xml,
  +acroread-7.0.9.ebuild:
  Version bump to 7.0.9; fixes some security flaws, especially in the browser
  plugin (bug #159874).

*acroread-7.0.8-r1 (22 Nov 2006)

  22 Nov 2006; Kevin F. Quinn <kevquinn@gentoo.org>
  +acroread-7.0.8-r1.ebuild:
  Rework to support multiple languages; resolve long-standing default language
  problem - see bug #125366

  18 Nov 2006; Stefan Schweizer <genstef@gentoo.org> acroread-7.0.8.ebuild:
  Use linguas_nb instead of no thanks to Alexander Nicolaysen Sørnes
  <alex@thehandofagony.com> in bug 152671

  01 Oct 2006; Stefan Schweizer <genstef@gentoo.org>
  -files/acroread-langpack.patch, -acroread-7.0.5-r2.ebuild,
  -acroread-7.0.5-r3.ebuild, acroread-7.0.8.ebuild:
  All languages are available now, thanks to Giacomo Perale