@@ -44,26 +44,26 @@ DIST AdobeReader_suo-7.0.9-1.i386.tar.gz 48256107 RMD160 77c47af7d67fd4a8f17c419
 DIST AdobeReader_sve-7.0.8-1.i386.tar.gz 49181229 RMD160 210335f85ac392ccb5f915e3e19b4a4e75fe2602 SHA1 d659d83e7adc7f7b0b008e595693cadbbbb3982d SHA256 d8c519900f3b2a9936af218891ae4781c5dbe32143c2cb054ee20332c5dcc4ae
 DIST AdobeReader_sve-7.0.9-1.i386.tar.gz 49194849 RMD160 a93add1f6fb9e54272da283c848ef61d7b953baa SHA1 a494b65e2f7b2916ef346a13d8825c5b32b24239 SHA256 8b09ab347ab4b307b70ea44f0dfe3c3a2e19cfeafe936e43fe8f042464b50c26
 DIST libcups.so-i386.bz2 50564 RMD160 a8bedc7151eb1d547616124bfdd4844699a33c15 SHA1 d55609b2889c0cb668fb73b59d9d0ea4b3094a47 SHA256 77eb5cd6aeab630812f7e911db04b6042cd6dee6aa7b9d8cf7756dca14e24b38
-EBUILD acroread-7.0.8-r1.ebuild 7436 RMD160 6a6907005028988d4b72e322950749453776d6a9 SHA1 ef835e604b180750a65bf48ffad840be51018543 SHA256 c653be7cff44d5fd338b190c463e6d62d3621ed08e5e467712f699eaf6cc4b94
-MD5 f12091b2e790783cf7466ee8a880feb5 acroread-7.0.8-r1.ebuild 7436
-RMD160 6a6907005028988d4b72e322950749453776d6a9 acroread-7.0.8-r1.ebuild 7436
-SHA256 c653be7cff44d5fd338b190c463e6d62d3621ed08e5e467712f699eaf6cc4b94 acroread-7.0.8-r1.ebuild 7436
-EBUILD acroread-7.0.8.ebuild 4902 RMD160 dcb6bc89e546993e5af6057047670e3ad35095a8 SHA1 28927724fe24403019ee0e998b614a63a9c0e6c2 SHA256 4afd6f43fcf834c5518620e309fa80b929938b064a9dda01c7ca632831668c8a
-MD5 a42f7cd5b030e12bc92494cd84272cec acroread-7.0.8.ebuild 4902
-RMD160 dcb6bc89e546993e5af6057047670e3ad35095a8 acroread-7.0.8.ebuild 4902
-SHA256 4afd6f43fcf834c5518620e309fa80b929938b064a9dda01c7ca632831668c8a acroread-7.0.8.ebuild 4902
-EBUILD acroread-7.0.9-r1.ebuild 7432 RMD160 1b31362536b4cd2d0e59615f3ff4d8f63732a218 SHA1 66ef664838682ff6c642bfd2ea4bee28a8c8a946 SHA256 685e9f39022235a0c4c5251dd3a2dc89ee9112be442c9aee40a47593473c8a20
-MD5 201a339e8f9272e7a35b7d4aab08b181 acroread-7.0.9-r1.ebuild 7432
-RMD160 1b31362536b4cd2d0e59615f3ff4d8f63732a218 acroread-7.0.9-r1.ebuild 7432
-SHA256 685e9f39022235a0c4c5251dd3a2dc89ee9112be442c9aee40a47593473c8a20 acroread-7.0.9-r1.ebuild 7432
-EBUILD acroread-7.0.9.ebuild 7436 RMD160 8e4cec191302ecd04f2e2282c99e0c0794e39fd1 SHA1 44882590e352e5b01d69b561a5819e458d65c5e7 SHA256 0d4db65e04f26fa93e25d6b3e46d6d1937314f3835a08fb19cdc47c8e994fe07
-MD5 cfded58332b855bea1616fa9f80490dc acroread-7.0.9.ebuild 7436
-RMD160 8e4cec191302ecd04f2e2282c99e0c0794e39fd1 acroread-7.0.9.ebuild 7436
-SHA256 0d4db65e04f26fa93e25d6b3e46d6d1937314f3835a08fb19cdc47c8e994fe07 acroread-7.0.9.ebuild 7436
-MISC ChangeLog 17179 RMD160 72a7ba07ffdf93b766635995e701ee2253bce94f SHA1 ef528e62e97ddb5b0843cae0ea0fa83f72a0a82f SHA256 c434fb39e5e0d9c4da54e57e2b8d9540e0f801ee365ca4a4d9956ca3c15ed387
-MD5 4ce4a06ba25665d44becbe76afbb64ab ChangeLog 17179
-RMD160 72a7ba07ffdf93b766635995e701ee2253bce94f ChangeLog 17179
-SHA256 c434fb39e5e0d9c4da54e57e2b8d9540e0f801ee365ca4a4d9956ca3c15ed387 ChangeLog 17179
+EBUILD acroread-7.0.8-r1.ebuild 7427 RMD160 306ac147a3311810e4755e3d69d98d571c051e51 SHA1 899e8c0cdfd9c50b085c9a31d6a7f2aa0f9c8473 SHA256 2aff25621f678e5c3e344290593d390a2a7a5d84b51e9dd0b42049f615b303c7
+MD5 ef93baf2177f9c62489a8afbdcee2dbb acroread-7.0.8-r1.ebuild 7427
+RMD160 306ac147a3311810e4755e3d69d98d571c051e51 acroread-7.0.8-r1.ebuild 7427
+SHA256 2aff25621f678e5c3e344290593d390a2a7a5d84b51e9dd0b42049f615b303c7 acroread-7.0.8-r1.ebuild 7427
+EBUILD acroread-7.0.8.ebuild 4899 RMD160 33cd7d3ef929bb0249469406bfc9951e4a0a9ac2 SHA1 b7f67a2d3d1b4360315626747c47097f2b562fbc SHA256 d908be93fe2faf54d1c107f31578d121e913177e3f9265c67a49d850f88ca9df
+MD5 777e95597467c02a686eb6a3a1a135c3 acroread-7.0.8.ebuild 4899
+RMD160 33cd7d3ef929bb0249469406bfc9951e4a0a9ac2 acroread-7.0.8.ebuild 4899
+SHA256 d908be93fe2faf54d1c107f31578d121e913177e3f9265c67a49d850f88ca9df acroread-7.0.8.ebuild 4899
+EBUILD acroread-7.0.9-r1.ebuild 7423 RMD160 053255cae32dc1fcfebccbd29ab8fc5786054f66 SHA1 72db343efa040a09192ed428a7204d28564dbb89 SHA256 048dbd265adb718ec11cbe5c870d92e868e8bb3f31c96b3eab3f343cd2dcd0e1
+MD5 b41bfd346afb8a457e263eb30e55249a acroread-7.0.9-r1.ebuild 7423
+RMD160 053255cae32dc1fcfebccbd29ab8fc5786054f66 acroread-7.0.9-r1.ebuild 7423
+SHA256 048dbd265adb718ec11cbe5c870d92e868e8bb3f31c96b3eab3f343cd2dcd0e1 acroread-7.0.9-r1.ebuild 7423
+EBUILD acroread-7.0.9.ebuild 7430 RMD160 043a0431fe968cf2a71dcd49dea35d4ed3ab4810 SHA1 3208db1be5fa21ed50de46d9d2335bbd2e67be6b SHA256 b0ce4332f37dd851e9cfcbc4742a211235f2d4f3dec580f610fba6d30f12ade9
+MD5 bbbd689fc575a71533f1530f3b34a123 acroread-7.0.9.ebuild 7430
+RMD160 043a0431fe968cf2a71dcd49dea35d4ed3ab4810 acroread-7.0.9.ebuild 7430
+SHA256 b0ce4332f37dd851e9cfcbc4742a211235f2d4f3dec580f610fba6d30f12ade9 acroread-7.0.9.ebuild 7430
+MISC ChangeLog 17354 RMD160 4a5a9b4345cffc7ceba0f1f807abfedf20065b60 SHA1 4216f2a080864eeeca94fde9db5cc4a7ef45942c SHA256 6a9be4816170992670a702cfb467efb028da81027ff2d6913802a3e4d26d74ab
+MD5 97245c35b94acf0f5369f20ec1aabe47 ChangeLog 17354
+RMD160 4a5a9b4345cffc7ceba0f1f807abfedf20065b60 ChangeLog 17354
+SHA256 6a9be4816170992670a702cfb467efb028da81027ff2d6913802a3e4d26d74ab ChangeLog 17354
 MISC metadata.xml 411 RMD160 65693cf6d0a923442846552356219d5ab38bdea6 SHA1 13d21cc263bf180593abac9225b50a570ebe5b88 SHA256 e77c1ebd41c534bdc21610c46336162538a3d4a0623b3f4f1d08aa425782dd79
 MD5 98b1b45da9a6bf58f5ebb15e9dd3d00a metadata.xml 411
 RMD160 65693cf6d0a923442846552356219d5ab38bdea6 metadata.xml 411
@@ -81,9 +81,9 @@ MD5 ddb00dfe94be8ed7d58257c6349b8587 files/digest-acroread-7.0.9-r1 4615
 RMD160 077b5bc629ce347d9ecefc120c0d7ef0f1f4a16f files/digest-acroread-7.0.9-r1 4615
 SHA256 698c24c0320413f4db1a938ce737c83121f92ce556686e1ff0906fa853214614 files/digest-acroread-7.0.9-r1 4615
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFrpSnZfNLSOUrp0sRAv3dAJ0b0jo58siJIe8joBXggiWb7Dj+uACgr33D
-Zn/Vl6cgv0LOJ+NzRYaaRLE=
-=xkVN
+iD8DBQFFvEpm6J2i8a8J4okRAqWnAJ427jxHEabXdBbpt7WRp/4PttgrrgCfd8iE
+XH1Fh0I94ui99J3mdkDzbf8=
+=ErUl
 -----END PGP SIGNATURE-----
