@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/acroread-7.0.8.ebuild,v 1.8 2006/11/18 11:16:49 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/acroread-7.0.8.ebuild,v 1.9 2007/01/28 06:50:37 genone Exp $
 
 inherit eutils nsplugins
 
@@ -138,6 +138,6 @@ src_install() {
 }
 
 pkg_postinst () {
-	einfo "The Acrobat(TM) Security Plugin can be enabled with USE=ldap"
-	einfo "The Acrobat(TM) Browser Plugin can be enabled with USE=nsplugin"
+	elog "The Acrobat(TM) Security Plugin can be enabled with USE=ldap"
+	elog "The Acrobat(TM) Browser Plugin can be enabled with USE=nsplugin"
 }
