@@ -1,6 +1,10 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.95 2007/01/17 21:14:10 kevquinn Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.96 2007/01/28 06:50:37 genone Exp $
+
+  28 Jan 2007; Marius Mauch <genone@gentoo.org> acroread-7.0.8.ebuild,
+  acroread-7.0.8-r1.ebuild, acroread-7.0.9.ebuild, acroread-7.0.9-r1.ebuild:
+  Replacing einfo with elog
 
   17 Jan 2007; Kevin F. Quinn <kevquinn@gentoo.org>
   acroread-7.0.8-r1.ebuild, acroread-7.0.9-r1.ebuild:
